# n8n-bkp-restore

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mcp_init.json  pyproject.toml
config/: settings.json
docs/agents/: BACKLOG.md  DECISIONS.md  HANDOFF_TEMPLATE.md  NEW_CHAT_PROMPT.md  SESSION_MEMORY.md
src/n8n_backup_restore/: main.py
src/n8n_backup_restore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/n8n_backup_restore/models/: entities.py
src/n8n_backup_restore/services/: backup_compare_service.py  backup_service.py  mcp_client.py  restore_service.py  workflow_mcp_service.py
src/n8n_backup_restore/storage/: settings_store.py
src/n8n_backup_restore/ui/: main_window.py
src/n8n_backup_restore/utils/: files.py  logging_setup.py
tests/: test_backup_compare_service.py  test_backup_service.py  test_files.py  test_restore_service.py  test_settings_store.py  test_versioning.py  test_workflow_mcp_service.py
