[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n8n-backup-restore"
version = "0.1.0"
description = "Backup e restore de workflows n8n via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pyinstaller>=6.0.0",
]

[project.scripts]
n8n-backup-restore = "n8n_backup_restore.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
